--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,7 +53,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
       # 7) ビルド
-      - run: pnpm next build
+      - run: pnpm build
 
       # 8) 静的ファイルをアップロード
       - uses: actions/upload-pages-artifact@v3
