--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,12 +42,12 @@ jobs:
           static_site_generator: next
 
       # 5) Next.js ビルドキャッシュ復元
-      - uses: actions/cache@v4
-        with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+      # - uses: actions/cache@v4
+      #   with:
+      #     path: .next/cache
+      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
 
       # 6) 依存インストール
       - run: pnpm install --frozen-lockfile
@@ -59,6 +59,12 @@ jobs:
           ls -la
           echo "Checking for i18n config files:"
           find . -name "i18n*.ts" -o -name "i18n*.js"
+      - name: Check src directory
+        run: |
+          echo "Listing src directory:"
+          ls -la src/
+          echo "Finding i18n files in src:"
+          find src/ -name "*i18n*"
 
       # 7) ビルド
       - run: pnpm build
