--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,12 +42,12 @@ jobs:
           static_site_generator: next
 
       # 5) Next.js ビルドキャッシュ復元
-      # - uses: actions/cache@v4
-      #   with:
-      #     path: .next/cache
-      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
+      - uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
 
       # 6) 依存インストール
       - run: pnpm install --frozen-lockfile
@@ -65,6 +65,16 @@ jobs:
           ls -la src/
           echo "Finding i18n files in src:"
           find src/ -name "*i18n*"
+
+      - name: Check config files
+        run: |
+          echo "Checking next.config.js content:"
+          cat next.config.js
+          echo "Checking next.config.ts content:"
+          cat next.config.ts
+
+          # 必要に応じて古い設定ファイルを削除
+          rm next.config.js
 
       # 7) ビルド
       - run: pnpm build
