fix: reorder steps in Next.js workflow for clarity and maintainability

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -52,14 +52,15 @@ jobs:
       # 6) 依存インストール
       - run: pnpm install --frozen-lockfile
 
-      # 7) ビルド
-      - run: |
-          rm -f next.config.js
-          pnpm build
+      # 7) next.config.js の削除
+      - run: rm -f next.config.js
+
+      # 8) ビルド
+      - run: pnpm build
         env:
           GHP_URL: https://${{ github.actor }}.github.io/${{ github.repository }}
 
-      # 8) 静的ファイルをアップロード
+      # 9) 静的ファイルをアップロード
       - uses: actions/upload-pages-artifact@v3
         with:
           path: .next
