fix: update output path for static files in Next.js workflow and ensure export configuration

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -63,7 +63,7 @@ jobs:
       # 9) 静的ファイルをアップロード
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: .next
+          path: out
 
   deploy:
     needs: build
