--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -55,16 +55,10 @@ jobs:
       # 7) next.config.js の削除
       - run: rm -f next.config.js
 
-      - name: Debug GitHub variables
-        run: |
-          echo "github.actor: ${{ github.actor }}"
-          echo "github.repository: ${{ github.repository }}"
-          echo "github.event.repository.name: ${{ github.event.repository.name }}"
-
       # 8) ビルド
       - run: pnpm build
         env:
-          GHP_URL: ${{ github.actor }}.github.io/${{ github.event.repository.name }}"
+          GHP_URL: ${{ github.actor }}.github.io/${{ github.event.repository.name }}
 
       # 9) 静的ファイルをアップロード
       - uses: actions/upload-pages-artifact@v3
