--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "generate:markdown": "node scripts/generate-resume.mjs markdown",
+    "generate:pdf": "node scripts/generate-resume.mjs pdf",
+    "generate:resume": "node scripts/generate-resume.mjs both"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
@@ -34,11 +37,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.17.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "markdown-pdf": "^11.0.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "^5"
